<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>cs.gmu.edu.eclab</groupId>
		<artifactId>mason-build</artifactId>
		<version>20</version>
	</parent>
	
	<artifactId>mason</artifactId>
	<name>mason</name>
	<packaging>jar</packaging>
	<url>http://maven.apache.org</url>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>
	<repositories>
		<repository>
			<id>repository</id>
			<url>file:///${project.basedir}/repository</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>java3d</groupId>
			<artifactId>j3d-core</artifactId>
			<version>1.3.1</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/java3d/j3d-core-utils -->
		<dependency>
			<groupId>java3d</groupId>
			<artifactId>j3d-core-utils</artifactId>
			<version>1.3.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.beanshell/bsh -->
		<dependency>
			<groupId>org.beanshell</groupId>
			<artifactId>bsh</artifactId>
			<version>2.0b4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/itext/itext -->
		<dependency>
			<groupId>itext</groupId>
			<artifactId>itext</artifactId>
			<version>1.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jfree/jcommon -->
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.24</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.17</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.media/jmf -->
		<dependency>
			<groupId>javax.media</groupId>
			<artifactId>jmf</artifactId>
			<version>2.1.1e</version>
		</dependency>
		<!--CUSTOM REPOSITORY STUFF -->
		
		<!-- <dependency>
			<groupId>edu.gmu.eclab</groupId>
			<artifactId>portfolio</artifactId>
			<version>4.0</version>
		</dependency> -->

		<!-- <dependency> <groupId>com.jogamp</groupId> <artifactId>jogamp-fat</artifactId> 
			<version>9999</version> </dependency> -->

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-main</artifactId>
			<version>2.3.1</version>
		</dependency>
	</dependencies>
</project>